# mkdocs_product_catalog

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pypi.yml
mkdocs_product_catalog/: catalog.py  nav.py  plugin.py  utils.py
mkdocs_product_catalog/assets/: product-catalog.css  product-catalog.js
tests/integration_tests/: test_multirepo_build.py  test_simple_build.py
tests/test_site/: mkdocs-multirepo.yml  mkdocs.yml
tests/test_site/docs/: index.md  services.md
tests/test_site2/: mkdocs.yml
tests/test_site2/docs/: index.md
tests/test_site2/docs/catalog/: alpha.yaml
tests/test_site2/docs/catalog2/: beta.yaml
tests/test_site2/site/: 404.html  index.html
tests/test_site2/site/assets/: product-catalog.css  product-catalog.js
tests/test_site2/site/search/: search_index.json
tests/unit_tests/: test_nav.py  test_plugin.py
