[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-product-catalog"
version = "2.1.0"
description = "MkDocs plugin that generates a product catalog page from YAML files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["mkdocs", "mkdocs-plugin", "catalog", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mkdocs>=1.4",
    "pyyaml>=6.0",
]

[project.entry-points."mkdocs.plugins"]
product-catalog = "mkdocs_product_catalog.plugin:ProductCatalogPlugin"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "mkdocs-multirepo-plugin>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mkdocs_product_catalog*"]

[tool.setuptools.package-data]
mkdocs_product_catalog = ["assets/*.css", "assets/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests", "tests/integration_tests"]
